--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -12,10 +12,10 @@
                 <li class=" dropbtn"><a title="All Categories" class="sf-with-ul">Categories</a>
                     <ul class="dropdown-content sub-menu">
                         {% for item in data.category %}
-                            <li class="dropbtn-1 "><a href="/category/{{ item.category | lower | replace(" ", "-") }}" class="sf-with-ul">{{ item.category }}</a>
+                            <li class="dropbtn-1 "><a href="/category/{{ item.id }}" class="sf-with-ul">{{ item.name }}</a>
                                 <ul class=" sub-menu-1">
-                                    {% for category_book in item.category_book %}
-                                        <li class="menu-item "><a href="#">{{ category_book }}</a></li>
+                                    {% for category_book in item.cat_child %}
+                                        <li class="menu-item "><a href="/category/{{ category_book.id }}">{{ category_book.name }}</a></li>
                                     {% endfor %}
                                 </ul>
                             </li>
