--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -12,11 +12,15 @@
                 <li class=" dropbtn"><a title="All Categories" class="sf-with-ul">Categories</a>
                     <ul class="dropdown-content sub-menu">
                         {% for item in data.category %}
-                            <li class="dropbtn-1 "><a href="/category/{{ item.id }}" class="sf-with-ul">{{ item.name }}</a>
+                            <li class="dropbtn-1 "><a href="/category/{{ item.category | lower | replace(" ", "-") }}" class="sf-with-ul">{{ item.category }}</a>
                                 <ul class=" sub-menu-1">
-                                    {% for category_book in item.cat_child %}
-                                        <li class="menu-item "><a href="/category/{{ category_book.id }}">{{ category_book.name }}</a></li>
-                                    {% endfor %}
+                                    {% if item.category_child | length === 1%}
+                                    <li class="menu-item "></li>
+                                    {% else %}
+                                        {% for category_child in item.category_child %}                       
+                                            <li class="menu-item "><a href="/category/{{ category_child }}">{{ category_child }}</a></li>
+                                        {% endfor %}
+                                    {% endif %}
                                 </ul>
                             </li>
                         {% endfor %}
